Add Documents views

--- a/src/views/Progress/style.less
+++ b/src/views/Progress/style.less
@@ -1,7 +1,6 @@
 .progress-widget-style {
   position: relative;
-  background-color: #ffffff;
-  border: solid 2px #3492ff;
+  background-color: #3492ff;
   display: flex;
   .progress-container {
     display: flex;
@@ -12,6 +11,7 @@
     font-family: Microsoft JhengHei;
     .progress-title, .progress-content {
       margin: 5px 10px;
+      color: #ffffff;
     }
     .progress-title {
       display: flex;
