--- a/src/views/Terminal/style.less
+++ b/src/views/Terminal/style.less
@@ -1,6 +1,6 @@
 .terminal-widget-style {
   position: relative;
-  background-color: #3492ff;
+  background-color: #adadad;
   display: flex;
   border-radius: 40%;
   .terminal-container {
