Add Connect, Data, DataBase, OffPage, SubRoutine

--- a/src/views/SubRoutine/style.less
+++ b/src/views/SubRoutine/style.less
@@ -1,22 +1,22 @@
-.data-widget-style {
+.subroutine-widget-style {
   position: relative;
   display: flex;
   path {
     fill : inherit;
   }
-  .data-container {
+  .subroutine-container {
     width: 80%;
     height: 100%;
-    margin: auto;
-    z-index: 10;
     display: flex;
     flex-direction: column;
-    font-family: Microsoft JhengHei;
-    .data-title, .data-content {
+    z-index: 10;
+    margin: auto;
+    .subroutine-title, .subroutine-content {
       margin: 5px 10px;
       color: #ffffff;
+      font-family: Microsoft JhengHei;
     }
-    .data-title {
+    .subroutine-title {
       display: flex;
       flex: 1;
       font-size: 18px;
@@ -24,7 +24,7 @@
       justify-content: center;
       align-items: center;
     }
-    .data-content {
+    .subroutine-content {
       display: flex;
       flex: 2;
       font-size: 14px;
