--- a/src/views/DataBase/style.less
+++ b/src/views/DataBase/style.less
@@ -1,22 +1,22 @@
-.data-widget-style {
+.database-widget-style {
   position: relative;
   display: flex;
   path {
     fill : inherit;
   }
-  .data-container {
-    width: 80%;
-    height: 100%;
-    margin: auto;
-    z-index: 10;
+  .database-container {
+    width: 100%;
+    height: 45%;
+    margin-top: 55%;
     display: flex;
     flex-direction: column;
-    font-family: Microsoft JhengHei;
-    .data-title, .data-content {
+    z-index: 10;
+    .database-title, .database-content {
       margin: 5px 10px;
       color: #ffffff;
+      font-family: Microsoft JhengHei;
     }
-    .data-title {
+    .database-title {
       display: flex;
       flex: 1;
       font-size: 18px;
@@ -24,7 +24,7 @@
       justify-content: center;
       align-items: center;
     }
-    .data-content {
+    .database-content {
       display: flex;
       flex: 2;
       font-size: 14px;
