Fix flowchart to update storm-react-diagram

--- a/demos/routes/SimpleExample/style.less
+++ b/demos/routes/SimpleExample/style.less
@@ -1,16 +1,14 @@
-.home-page-style {
-  background-color: #eeeeee;
+.simple-example-style {
   width: 100%;
   height: 100%;
-  .welcome {
-    font-size: 55px;
-    font-weight: bold;
-    width: 430px;
-    margin: auto;
-    color: #a0d8ef;
-    text-shadow: 3px 3px #afafb0;
-    span {
-      font-family: 'January Handwriting - TTF';
-    }
+  .flow-chart-area {
+    width: 90%;
+    height: 100%;
+    float: right;
+  }
+  .source-area {
+    width: 10%;
+    height: 100%;
+    float: left;
   }
 }
